--- a/package.json
+++ b/package.json
@@ -17,10 +17,9 @@
     "gulp-if": "^1.2.5",
     "gulp-load-plugins": "^1.0.0-rc.1",
     "gulp-rename": "^1.2.2",
-    "gulp-requirejs": "^0.1.3",
     "gulp-shell": "^0.4.2",
     "gulp-sourcemaps": "^1.5.2",
-    "run-sequence": "^1.1.1"
+    "requirejs": "^2.1.18"
   },
   "author": "yamoo9 <yamoo9@naver.com>",
   "license": "ISC"
